📚 Theme changes part (2 of 3)
- Added particles to mobile.html.
- Changed major site colors.
- Renamed some files.

--- a/resources/css/styling.css
+++ b/resources/css/styling.css
@@ -45,7 +45,12 @@ html {
     margin-top: -100px;
 }
 
-a:link:hover {
+.hyperlink {
+    color: #c315c3;
+}
+
+.hyperlink:hover {
+    color: #9C27B0;
     text-decoration: none;
 }
 
